--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@ body {
 
 /* Cabeçalho */
 header {
-    background-color: #ff9800;
+    background-color: #00c8ff;
     color: white;
     padding: 20px;
     text-align: center;
